favButton z-index fixed

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -91,6 +91,7 @@
     position: relative;
     display: contents;
     color: var(--main-font-color);
+    z-index: 3;
 }
 .fav-icon-unfav{
     color: var(--main-font-color);
